js/js.translator/testData/incremental/invalidation/typeScriptExportSurfaceUpdatesPerFile/lib1/l1.1.kt
@JsExport
fun bar(): Int = 1
